# Agentic-DeepFake-Classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test_model_load.py
.github/: .pre-commit-config.yaml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  POC.MD  tastks.md
frontend/: app.py
src/: __init__.py  analyzer.py
src/agents/: __init__.py  cognitive.py  cognitive_agent.py  decision.py  decision_agent.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py  server.py
src/api/routes/: __init__.py  analysis.py  health.py
src/core/: __init__.py  config.py  exceptions.py  models.py
src/detection/: __init__.py  classifier.py  face.py  network.py  video.py  xception.py
src/detector/: __init__.py  classifier.py  face_detector.py  pipeline.py  video_processor.py
src/pipeline/: __init__.py  analysis.py  detection.py
