[project]
name = "agentic-deepfake-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "keras>=3.13.0",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "tensorflow>=2.20.0",
    "uvicorn>=0.40.0",
    "yolov9>=0.0.1",
]
