[project]
name = "agentic-deepfake-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlib-bin>=19.24.0",
    "fastapi>=0.100.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "python-multipart>=0.0.21",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "uvicorn>=0.23.0",
]
